--- a/html/forgotpassword.html
+++ b/html/forgotpassword.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- forgotpassword.html -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,18 +9,32 @@
     <div class="container mt-5">
         <div class="card p-4">
             <h2 class="text-center">Forgot Password</h2>
-            <input id="forgot-email" type="email" class="form-control mt-3" placeholder="Enter Registered Email">
-            <p id="forgot-error" class="error-message"></p>
-            <button onclick="sendOtp()" class="btn btn-primary mt-3">Send OTP</button>
 
-            <div id="otp-section" style="display:none">
+            <!-- Step 1: Enter Email -->
+            <div id="email-section">
+                <input id="email" type="email" class="form-control mt-3" placeholder="Enter Registered Email">
+                <button onclick="sendOtp()" class="btn btn-primary mt-3">Send OTP</button>
+                <p id="error-message" class="text-danger"></p>
+            </div>
+
+            <!-- Step 2: Enter OTP -->
+            <div id="otp-section" style="display: none;">
                 <input id="otp" type="text" class="form-control mt-3" placeholder="Enter OTP">
+                <button onclick="verifyOtp()" class="btn btn-success mt-3">Verify OTP</button>
+                <p id="otp-error-message" class="text-danger"></p>
+                <button onclick="sendOtp()" class="btn btn-primary mt-3">Re Send OTP</button>
+
+            </div>
+
+            <!-- Step 3: Reset Password -->
+            <div id="reset-section" style="display: none;">
                 <input id="new-password" type="password" class="form-control mt-3" placeholder="Enter New Password">
                 <button onclick="resetPassword()" class="btn btn-success mt-3">Reset Password</button>
+                <p id="reset-error-message" class="text-danger"></p>
             </div>
         </div>
     </div>
 
-    <script src="../js/app.js"></script>
+    <script src="../js/forgotpassword.js"></script>
 </body>
 </html>
