--- a/html/register.html
+++ b/html/register.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- register.html -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,6 +19,6 @@
     </div>
 
     <!-- <script src="app.js"></script> -->
-    <script src="../js/app.js"></script>
+    <script src="../js/register.js"></script>
 </body>
 </html>
