--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,8 @@
     
         <!-- <script src="app.js"></script> -->
         <script src="../js/app.js"></script>
+        <script src="../js/login.js"></script>
+        <script src="../js/register.js"></script>
 
     </body>
 </html>
