--- a/html/login.html
+++ b/html/login.html
@@ -18,6 +18,6 @@
         </div>
     </div>
 
-    <script src="../js/app.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 </html>
