--- a/html/register.html
+++ b/html/register.html
@@ -11,6 +11,8 @@
             <h2 class="text-center">Register</h2>
             <input id="reg-username" type="text" class="form-control mt-3" placeholder="Enter Username">
             <input id="reg-email" type="email" class="form-control mt-3" placeholder="Enter Email">
+            <input id="reg-firstName" type="text" class="form-control mt-3" placeholder="Enter First Name">
+            <input id="reg-secondName" type="text" class="form-control mt-3" placeholder="Enter Second Name">
             <input id="reg-password" type="password" class="form-control mt-3" placeholder="Enter Password">
             <p id="reg-error" class="error-message"></p>
             <button onclick="registerUser()" class="btn btn-primary mt-3">Register</button>
