--- a/html/cart.html
+++ b/html/cart.html
@@ -112,11 +112,11 @@
             <span id="account-name" class="text-white"></span>
         </div>
         <ul>
-            <li><a href="#">My Account</a></li>
-            <li><a href="#">My Orders</a></li>
-            <li><a href="#">My Cart</a></li>
-            <li><a href="#">Messages</a></li>
-            <li><a href="#">Notifications</a></li>
+            <li><a href="#" class="myAccount">My Account</a></li>
+            <li><a href="./orders.html" class="myOrders">My Orders</a></li>
+            <li><a href="./cart.html" class="myCart">My Cart</a></li>
+            <li><a href="#" class="">Messages</a></li>
+            <li><a href="#" class="">Notifications</a></li>
             <li><a href="login.html">Log Out</a></li>
         </ul>
     </div>
